== 1.1.x Unknown

* The configuration object can contain properties (other than setup/teardown/before/after) which are copied to each Test.Unit in the context—that is, are accesible through `this` inside your _should_ callbacks. Best understood through example:

    context("A 'should' execution", {
      assertLocalYipiyay : function(input, msg) {
        this.assertEqual('yipiyay', input, msg);
      }
      },
      should("get access to extra properties defined on the configuration parameter", function() {
        this.assertLocalYipiyay('yipiyay');
      })
    )();

* The context aliaser is now a real generator and accepts a prefix as a second argument. So, for this testing code

    jShoulda
      .setContextAlias('un', 'Un')
      .setContextAlias('para', 'para')
      .setShouldAlias('deberia', 'debería');

    un("programador",
      para("ser feliz",
        deberia("poder comer melocotones de Calanda todo el año", function() {
        })
      )
    )();

  the outputted name for our test will be "Un programador para ser feliz debería poder comer melocotones de Calanda todo el año".

* Contexts are now allowed to be anonymous.

== 1.1 2008-11-09

* jShoulda is now a global symbol
* Refactored code to allow simple aliasing
* Aliasing methods jShoulda.setShouldAlias and jShoulda.setContextAlias
* Configurable connector deprecated (and removed) in favor of jShoulda.setShouldAlias method.
* global methods `should` and `context` are now created through aliasing
* Try this, babe

    jShoulda.setContextAlias('describe').setShouldAlias('it', '');
    describe("A context", {},
      it("runs tests", function() {
        this.assert(true);
      })
    )();

* The configuration object (setup/teardown) is now optional
* before/after are documented alias to setup/teardown since this very moment.

== 1.0.1 2008-10-31

* Configurable connector. Overwrite `should.connector` if you want to use a localized connector.

== 1.0 2008-10-18
